<resources>
    <string name="app_name">Convives</string>
    <string name="please_wait">Please wait...</string>

    <!--MainActivity-->
    <string name="convives">Convives</string>
    <string name="start_search">Press to start a search</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete account</string>
    <string name="signed_in">Successfully signed in. Welcome</string>
    <string name="signed_out">You have been signed out</string>
    <string name="could_not_sign_you_in">Could not sign you in. Please try again later</string>
    <string name="invalid_email_password">Invalid email address or password</string>
    <string name="delete_account_successfully">Account was deleted</string>
    <string name="delete_account_not_successfully_firebase_database">Could not delete data from the server, try again later</string>
    <string name="delete_account_not_successfully_firebase_storage">Could not delete photo from the server, try again later</string>
    <string name="delete_account_not_successfully_firebase_auth">Could not delete account, try again later</string>
    <string name="location_permission">Make permission for location</string>

    <!--settingsActivity-->
    <string name="settings">Account Settings</string>
    <string name="age">Age</string>
    <string name="sex">Gender</string>
    <string-array name="sex_array">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string name="mute_notifications">Mute notifications</string>
    <string name="photo">Photo</string>
    <string name="touch_picture">Touch picture for changing it</string>
    <string name="minimum_age">Minimum allowed age is 18</string>

    <!--SearchActivity-->
    <string name="search">Search Settings</string>
    <string name="search_distance">Maximum Distance</string>
    <string name="search_age">Age range</string>
    <string name="search_min">min</string>
    <string name="search_max">max</string>
    <string name="search_sex">Show</string>
    <string name="search_female">Female</string>
    <string name="search_male">Male</string>
    <string name="search_distance_in">Show distance in</string>
    <string name="search_km">km</string>
    <string name="search_mi">mi</string>

    <!--UsersActivity-->
    <string name="age_users_activity">Age:</string>
    <string name="online">online</string>
    <string name="last_online">last online: </string>
    <string name="last_online_no_data">last online: no data</string>
    <string name="distance_users_activity">Distance:</string>
    <string name="km_users_activity">km</string>
    <string name="mi_users_activity">mi</string>
    <string name="current_position">Couldn not take your current position</string>

    <!--ChatActivity-->
    <string name="delete_match">Delete match</string>
    <string name="not_delete_match">Could not delete match. Try again later</string>
    <string name="data_reached">Data is reached</string>
    <string name="waiting">waiting...</string>

    <!--UserActivity-->
    <string name="convivesdata">Convive profile</string>
    <string name="name">Name</string>

    <!--<string name="toolbar_titel">Toolbar titel</string>-->
    <!--<string name="sex_prompt">Choose a sex</string>-->
    <!--<string name="no_longe_mute_notifications">Notifications no longe mute</string>-->
</resources>
